[gd_scene load_steps=2 format=3 uid="uid://d1q2w3e4r5t6y"]

[ext_resource type="Script" uid="uid://poso4jxw1wq" path="res://scripts/battle_ui.gd" id="1_ui_script"]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource("1_ui_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "02:00"
horizontal_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1
value = 5.0
show_percentage = false

[node name="PlayerTerritoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You: 0%"

[node name="OpponentTerritoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opponent: 0%"

[node name="CardContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_bottom = -10.0
alignment = 1
